fix tab slider font styles on iPhone

--- a/app/assets/stylesheets/partials/_media.css.sass
+++ b/app/assets/stylesheets/partials/_media.css.sass
@@ -267,9 +267,15 @@
       li
         display: block
         float: none
+        margin: 0
+
+      a
+        padding-top: 8px
+        padding-bottom: 8px
 
       a:hover, a.active
         height: auto
+        position: inherit
 
     .second-level-navigation
       display: none
